# etri_ids_rust

./: Cargo.toml  README.md  build.sh  config.yaml
blacklist/: emerging-Block-IPs.txt
ids-xdp/: Cargo.toml
ids-xdp/src/: main.rs
src/: config.rs  main.rs
src/blacklist/: blacklist.rs
src/dto/: ids_dto.rs  mod.rs
src/service/: ids.rs  mod.rs  suricata.rs
