[package]
name = "ids_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
pcap = "2.0"
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"
get_if_addrs = "0.5"
cron = "0.12"
walkdir = "2.4"
nix = { version = "0.29", features = ["signal"] }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1"
tokio-util = "0.7"
libc = "0.2"

[workspace]
members = [".", "ids-xdp"]
